[package]
name = "first-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint= [ ]
# cargo test 
# cargo build/cargo run 
# cargo test 
# #[cfg("no-entrypoint")] 
# mod Mydata



[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
solana-program = "1.14.10"

[dev-dependencies]
solana-program-test = "1.14.10"
solana-sdk = "1.14.10"

#customize your lib
[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
# target -> wasm -> bpf .so 

